mobile view stopped horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 #root {
-  max-width: 1280px;
+  max-width: 100vw;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
+}
+
+@media (min-width: 1280px) {
+  #root {
+    max-width: 1280px;
+    padding: 2rem;
+  }
 }
